Add admin acccounts and a users control panel for them

--- a/app/views/albums/edit.html.erb
+++ b/app/views/albums/edit.html.erb
@@ -6,5 +6,5 @@
 <% nav_links = [] %>
 <% nav_links << link_to("Back to #{@album.name}", album_url(@album)) %>
 <% nav_links << button_to("Destroy #{@album.name}!",
-  album_url(@album), method: :delete ) %>
+  album_url(@album), method: :delete ) if current_user.admin? %>
 <%= navigation_footer(nav_links) %>
