--- a/app/views/bands/show.html.erb
+++ b/app/views/bands/show.html.erb
@@ -3,7 +3,10 @@
 <%= list_of_model_objects(@band.albums, :album_url) %>
 
 <% nav_links = [] %>
-<% nav_links << link_to("New album", new_album_url(@band)) %>
-<% nav_links << link_to("Edit #{@band.name}", edit_band_url(@band)) %>
+<% if current_user.admin? %>
+  <% nav_links << link_to("New album", new_album_url(@band)) %>
+  <% nav_links << link_to("Edit #{@band.name}", edit_band_url(@band)) %>
+<% end %>
+
 <% nav_links << link_to("Back to BANDZ", bands_url) %>
 <%= navigation_footer(nav_links) %>
