--- a/app/views/tracks/edit.html.erb
+++ b/app/views/tracks/edit.html.erb
@@ -3,9 +3,8 @@
 <%= render 'form', form_action: track_url(@track), form_method: :patch,
   track: @track, submit_text: "Save Changes" %>
   
-  
 <% nav_links = [] %>
-<% nav_links << button_to("Destroy #{@track.name}!",
-  track_url(@track), method: :delete ) %>
 <% nav_links << link_to("Back to #{@track.name}", track_url(@track)) %>
+<% nav_links << button_to("Destroy #{@track.name}!",
+  track_url(@track), method: :delete ) if current_user.admin? %>
 <%= navigation_footer(nav_links) %>
