--- a/app/views/albums/show.html.erb
+++ b/app/views/albums/show.html.erb
@@ -5,7 +5,10 @@
 <%= list_of_model_objects(@album.tracks, :track_url) %>
 
 <% nav_links = [] %>
-<% nav_links << link_to("New track", new_track_url(@album)) %>
-<% nav_links << link_to("Edit #{@album.name}", edit_album_url(@album)) %>
+<% if current_user.admin? %>
+  <% nav_links << link_to("New track", new_track_url(@album)) %>
+  <% nav_links << link_to("Edit #{@album.name}", edit_album_url(@album)) %>
+<% end %>
+
 <% nav_links << link_to("Back to #{@album.band.name}", band_url(@album.band)) %>
 <%= navigation_footer(nav_links) %>
