--- a/app/views/tracks/_note.html.erb
+++ b/app/views/tracks/_note.html.erb
@@ -1,7 +1,7 @@
 <p>
   Posted <%= note.created_at %> by <%= note.user.email %><br>
   --<%= note.text %>
-  <% if note.user == current_user %>
+  <% if note.user == current_user || current_user.admin? %>
     <%= button_to "Delete!", note_url(note), method: :delete %>
   <% end %>
 </p>
