--- a/app/views/tracks/show.html.erb
+++ b/app/views/tracks/show.html.erb
@@ -11,7 +11,8 @@
 <%= render 'note_form', track: @track %>
 
 <% nav_links = [] %>
-<% nav_links << link_to("Edit #{@track.name}", edit_track_url(@track)) %>
+<% nav_links << link_to("Edit #{@track.name}",
+  edit_track_url(@track)) if current_user.admin? %>
 <% nav_links << link_to("Back to #{@track.album.name}", 
   album_url(@track.album)) %>
 <%= navigation_footer(nav_links) %>
